# sister

./: .gitignore  README.md
blender/: batch_rendering.py  blender_render.py  get_coordinate_template.py  reconstruct_pcd.py  scene_blender.sh  visualize.py  visualize_ply.py
blender/outputs/Depth/: 0000.exr
blender/templates/: CalibrationPlate.blend  component_0J.blend  component_1B.blend  component_1G.blend  component_hexa_nut.blend  component_hexa_screw.blend  platewasher.blend
cpp/: CMakeLists.txt
cpp/include/sister/: SisterMultiviewDisparities.hpp
cpp/src/: compute_disp.cpp  makefile
cpp/src/sister/: DSI.cpp  census.cpp  postprocess.cpp  sgm.cpp
data/: TIPS.md
data/calibration_plate/: .~lock.calbration_plate_001.odg#  CalibrationPlate.blend  CalibrationPlate.blend1  StrangeModel.blend  calbration_plate_001.odg
data/cameras/: basler_camera.xml  huawei_camera.xml  ipad_video_camera.xml  kinect2.xml  usb_camera.xml  usb_camera_1.txt  usb_camera_1cm.xml  usb_camera_hd.xml
data/scripts/: ipad_sample.sh  kinect2_mesh_sample.sh  rgb_mesh_sample.sh  rgb_mesh_sample_mac.sh  rgbd_mesh_sample.sh
dataset/: algorithms_naming_convention.txt  generate_clouds.py
dataset/cads/component_0J/: component_0J.stp
dataset/cads/component_1B/: component_1B.stp
dataset/cads/component_1G/: component_1G.stp
dataset/cads/hexa_nut/: hexa_nut.skp
dataset/cads/hexa_screw/: hexa_screw.skp
dataset/cads/washer/: washer.skp
dataset/clouds/arduino/: arduino.ply
dataset/clouds/component_0J/: component_0J.pcd  component_0J.ply
dataset/clouds/component_1B/: component_1B.pcd  component_1B.ply
dataset/clouds/component_1G/: component_1G.pcd  component_1G.ply
dataset/clouds/hexa_nut/: hexa_nut.pcd  hexa_nut.ply
dataset/clouds/hexa_screw/: hexa_screw.pcd  hexa_screw.ply
dataset/clouds/nodemcu/: nodemcu.pcd  nodemcu.ply
dataset/clouds/plane/: plane.pcd  plane.ply
dataset/clouds/washer/: washer.pcd  washer.ply
dataset/models/component_0J/: component_0J.ply  component_0J.stl
dataset/models/component_1B/: component_1B.ply  component_1B.stl
dataset/models/component_1G/: component_1G.ply  component_1G.stl
dataset/models/hexa_nut/: hexa_nut.ply  hexa_nut.stl
dataset/models/hexa_screw/: hexa_screw.pcd  hexa_screw.ply  hexa_screw.stl
dataset/models/nodemcu/: nodemcu.ply
dataset/models/plane/: plane.ply  plane.stl
dataset/models/washer/: washer.ply  washer.stl
dataset/plates/: plate_arduino.odg  plate_component_0J.odg  plate_component_1B.odg  plate_component_1G.odg  plate_hexa_nut.odg  plate_hexa_screw.odg  plate_nodemcu.odg  plate_washer.odg
docs/: index.html
docs/css/: style.css
kinect/: CMakeLists.txt
kinect/src/: main.cpp
python/: compare_clouds.py  detect_markers_over_dataset.py  export_frame_image.py  export_raw_dataset.py  extract_dataset.py  generate_point_cloud.py  sister.py  test_dataset.py  test_frame.py  test_frame_batch.py  test_frame_by_dataset.py  test_frame_mac.py  test_rf.py  test_rf_inverse_depth.py  test_rf_monodepth.py
python/sister/: datasets.py  sister.py  transformations.py
python/temp/: camera_print.py  compute_sgm_over_dataset.py  export_depth_results.py  export_results.py  live_depth_explorer.py  test.ipynb  test_alignment.py  test_depths_match.py  test_depths_match_of_planes.py  test_depths_match_single.py  test_synthetic_images.py
python/temp/notebooks/: results_depth_test.ipynb
python/temp/plots/: plot_planes.py  plot_planes2.py
python/temp/results/: depths_grid_generation.py  results_playground.py
ros/: README.md
sister_ros/: CMakeLists.txt  package.xml
sister_ros/src/nodes/: cluster_grasp.cpp
smatch/: CMakeLists.txt
smatch/include/smatch/: DSI.h  oldcensus.h  stereoalgo.h  types.h
smatch/src/: run.cpp
smatch/src/smatch/: postprocess.cpp  sgm.cpp
